name:                ghcjs-react
version:             0.0.0
synopsis:            Om-inspired React.js support for GHCJS.
description:
license:             BSD3
license-file:        LICENSE
author:              FP Complete
maintainer:          chrisdone@fpcomplete.com
copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     React
                       React.Internal
                       React.Ref
                       React.Events
                       React.Ace
                       React.Components
  other-extensions:    GADTs
                       ExistentialQuantification
                       MultiParamTypeClasses
                       StandaloneDeriving
                       RankNTypes
                       FlexibleContexts
                       ScopedTypeVariables
                       CPP
                       ConstraintKinds
                       TemplateHaskell
                       TypeFamilies
                       BangPatterns
                       OverloadedStrings
                       OverloadedLists
                       TypeSynonymInstances
                       FlexibleInstances
                       DeriveGeneric
  build-depends:       base >=4.7 && <5,
                       transformers >=0.3,
                       containers >=0.5,
                       mtl >= 2.1,
                       vector >= 0.10,
                       unordered-containers >= 0.2,
                       text >= 1.2,
                       stm >= 2.4
  hs-source-dirs:      src
  default-language:    Haskell2010
