name:                ghcjs-react
version:             0.0.0
synopsis:            Om-inspired React.js support for GHCJS.
description:
license:             BSD3
license-file:        LICENSE
author:              FP Complete
maintainer:          chrisdone@fpcomplete.com
copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     React
                       React.Internal
                       React.Event
                       React.Component
                       React.Builder
                       GHCJS.Compat
  other-extensions:    GADTs
                       ExistentialQuantification
                       MultiParamTypeClasses
                       StandaloneDeriving
                       RankNTypes
                       FlexibleContexts
                       ScopedTypeVariables
                       CPP
                       ConstraintKinds
                       TemplateHaskell
                       TypeFamilies
                       BangPatterns
                       OverloadedStrings
                       OverloadedLists
                       TypeSynonymInstances
                       FlexibleInstances
                       DeriveGeneric
  build-depends:       base >=4.7 && <5,
                       transformers,
                       containers,
                       mtl,
                       vector,
                       unordered-containers,
                       stm,
                       text, ghcjs-dom, ghcjs-base, ghcjs-jquery,
                       lens
  hs-source-dirs:      src
  default-language:    Haskell2010
